--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -8,6 +8,9 @@
     'globals';
 
 @import 
+    './blocks/burger-btn',
     './blocks/btn',
+    './blocks/cross-btn',
+    './blocks/mobile-overlay',
     './blocks/header',
     './blocks/dropdown-menu';
