--- a/styles/blocks/_mobile-overlay.scss
+++ b/styles/blocks/_mobile-overlay.scss
@@ -26,4 +26,11 @@
         row-gap: 30px;
         min-height: 80vh;
     }
+
+    &__item{
+        @include hover{
+            opacity: .7;
+            cursor: pointer;
+        }
+    }
 }
