--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -13,4 +13,7 @@
     './blocks/cross-btn',
     './blocks/mobile-overlay',
     './blocks/header',
-    './blocks/dropdown-menu';
+    './blocks/dropdown-menu',
+    './blocks/section',
+    './blocks/hero',
+    './blocks/content';
