--- a/styles/blocks/_hero.scss
+++ b/styles/blocks/_hero.scss
@@ -37,9 +37,9 @@
             row-gap: 24px;
         }
 
-        @include mobile{
-            line-height: 44px;
-        }
+        // @include mobile{
+        //     line-height: 44px;
+        // }
     }
 
     &__btn{
