--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -14,6 +14,7 @@
     './blocks/mobile-overlay',
     './blocks/header',
     './blocks/dropdown-menu',
+    './blocks/unusual-underline',
     './blocks/section',
     './blocks/hero',
     './blocks/content';
