--- a/styles/styles.css
+++ b/styles/styles.css
@@ -248,11 +248,11 @@ a {
 }
 
 h1, .h1 {
-  font-size: clamp(36px, 5vw, 72px);
+  font-size: clamp(54px, 5vw, 72px);
 }
 
 h2, .h2 {
-  font-size: clamp(32px, 4.4444444444vw, 64px);
+  font-size: clamp(52px, 4.4444444444vw, 64px);
 }
 
 h3, .h3 {
@@ -410,7 +410,7 @@ h4, .h4 {
 .header {
   font-weight: 500;
 }
-@media (max-width: 320px) {
+@media (max-width: 360px) {
   .header__logo {
     flex-shrink: 1;
   }
@@ -486,6 +486,7 @@ h4, .h4 {
   background-color: var(--color-primary);
 }
 .dropdown__submenu {
+  z-index: 3;
   position: absolute;
   top: 100%;
   left: 0;
@@ -498,6 +499,98 @@ h4, .h4 {
 .dropdown__item:hover .dropdown__submenu {
   visibility: visible;
   opacity: 1;
+}
+
+.underline {
+  position: relative;
+}
+.underline--large--1::after {
+  content: url("/assets/icons/underline--large.png");
+  position: absolute;
+  left: 0px;
+  bottom: -30px;
+  z-index: -1;
+  max-width: 300px;
+}
+@media (max-width: 1152px) {
+  .underline--large--1::after {
+    content: url("/assets/icons/underline--large--d3.png");
+    left: 140px;
+    bottom: -35px;
+    padding-right: 40px;
+  }
+}
+@media (max-width: 768px) {
+  .underline--large--1::after {
+    content: url("/assets/icons/underline--large--tablet.png");
+    bottom: -25px;
+    left: 190px;
+  }
+}
+@media (max-width: 360px) {
+  .underline--large--1::after {
+    content: url("/assets/icons/underline--large--tablet.png");
+    bottom: -27px;
+    left: 0px;
+  }
+}
+.underline--large--2::after {
+  content: url("/assets/icons/underline--large--2.png");
+  position: absolute;
+  left: 190px;
+  bottom: -22px;
+  z-index: -1;
+  max-width: 300px;
+}
+@media (max-width: 1152px) {
+  .underline--large--2::after {
+    content: url("/assets/icons/underline--large--2--d3.png");
+    bottom: -5px;
+    left: 150px;
+  }
+}
+@media (max-width: 768px) {
+  .underline--large--2::after {
+    content: url("/assets/icons/underline--large--2--tablet.svg");
+    bottom: -27px;
+    left: 137px;
+  }
+}
+@media (max-width: 360px) {
+  .underline--large--2::after {
+    content: url("/assets/icons/underline--large--2--mobile.png");
+    bottom: -5px;
+    left: 55px;
+  }
+}
+.underline--slim--large::after {
+  content: url("/assets/icons/underline--slim--large.svg");
+  position: absolute;
+  left: 0px;
+  bottom: -30px;
+  z-index: -1;
+}
+@media (max-width: 1152px) {
+  .underline--slim--large::after {
+    content: url("/assets/icons/underline--slim--large--d3.png");
+    left: 140px;
+    bottom: -35px;
+    padding-right: 40px;
+  }
+}
+@media (max-width: 768px) {
+  .underline--slim--large::after {
+    content: url("/assets/icons/underline--slim--large--tablet.png");
+    bottom: -25px;
+    left: 190px;
+  }
+}
+@media (max-width: 360px) {
+  .underline--slim--large::after {
+    content: url("/assets/icons/underline--slim--large--tablet.png");
+    bottom: -27px;
+    left: 0px;
+  }
 }
 
 .section {
@@ -533,11 +626,11 @@ h4, .h4 {
     top: 124px;
   }
 }
-@media (max-width: 320px) {
+@media (max-width: 360px) {
   .section--waved::after {
     content: url("/assets/images/bg-waves-mobile.png");
-    left: -4px;
-    top: -34px;
+    left: 0px;
+    top: 74px;
   }
 }
 .section--double {
@@ -566,7 +659,7 @@ h4, .h4 {
     top: 31px;
   }
 }
-@media (max-width: 320px) {
+@media (max-width: 360px) {
   .section--double::after {
     content: url("/assets/images/double-section-mobile.png");
     left: 0px;
@@ -587,7 +680,7 @@ h4, .h4 {
     row-gap: 100px;
   }
 }
-@media (max-width: 320px) {
+@media (max-width: 360px) {
   .hero {
     padding-block: 40px;
   }
@@ -616,11 +709,6 @@ h4, .h4 {
     row-gap: 24px;
   }
 }
-@media (max-width: 320px) {
-  .hero__header {
-    line-height: 44px;
-  }
-}
 @media (max-width: 768px) {
   .hero__btn {
     align-self: center;
@@ -643,7 +731,7 @@ h4, .h4 {
     width: 100%;
   }
 }
-@media (max-width: 320px) {
+@media (max-width: 360px) {
   .hero__img {
     min-width: 286px;
     width: 100%;
@@ -659,6 +747,11 @@ h4, .h4 {
 }
 .content--double {
   margin-bottom: 100px;
+}
+@media (max-width: 360px) {
+  .content--double {
+    margin-bottom: 0;
+  }
 }
 .content--double--second {
   -moz-column-gap: 60px;
@@ -676,7 +769,7 @@ h4, .h4 {
     row-gap: 60px;
   }
 }
-@media (max-width: 320px) {
+@media (max-width: 360px) {
   .content {
     padding-block: 40px;
   }
@@ -723,7 +816,7 @@ h4, .h4 {
     row-gap: 24px;
   }
 }
-@media (max-width: 320px) {
+@media (max-width: 360px) {
   .content__header {
     line-height: 44px;
   }
@@ -751,17 +844,17 @@ h4, .h4 {
   }
 }
 @media (min-width: 769px) {
-  .content__img--second {
+  .content__img--reverse {
     order: -1;
   }
 }
 @media (max-width: 768px) {
-  .content__img--second {
+  .content__img--reverse {
     max-width: 454px;
     width: 100%;
   }
 }
-@media (max-width: 320px) {
+@media (max-width: 360px) {
   .content__img {
     min-width: 286px;
     width: 100%;
