--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -17,6 +17,9 @@
     // circle
     --circle-border-radius: 50%;
 
+    // border
+    --border: 1px solid var(--color-accent-alt);
+
     // тени
     --shadow: 15px 10px 50% var(--color-shadow);
 
@@ -30,7 +33,7 @@
     --inline-padding: 32px;
 
     // отступ между секциями
-    --section-padding-y: 70px;
+    --section-padding-y: 140px;
 
     // высота кнопок
     --btn-height: 60px;
